k8s/lms-chart/templates/04-flask-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  namespace: library-app
spec:
  replicas: 1 # Run 1 pods for our application
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          # IMPORTANT: Use the image you pushed to Docker Hub
          image: azoooz/library-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: library-app
spec:
  type: LoadBalancer 
  selector:
    app: flask-app
  ports:
    - port: 80 # The port on the service
      targetPort: 5000 # The port on the pod
